--- a/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
@@ -8,6 +8,12 @@
 
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}"/>
+
+    <style>
+        .tooltip-inner {
+            text-align: left;
+        }
+    </style>
 </head>
 
 <div th:replace="fragments/header :: #header"></div>
