--- a/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/tasks-table.html
@@ -21,12 +21,12 @@
             <td th:text="${task.status}" style="text-align: center; vertical-align: middle"></td>
 
             <td th:if="${task.status} == 'Архив'" style="text-align: center; vertical-align: middle">
-                <a href="#" class="abutton">просмотр</a>
+                <a th:href="@{/tasks/preview/{id}(id=${task.id})}" class="abutton">просмотр</a>
                 <a th:href="@{/tasks/unarchive/{id}(id=${task.id})}" class="abutton">разархивировать</a>
             </td>
             <td th:unless="${task.status} == 'Архив'"
                 style="text-align: center; vertical-align: middle">
-                <a href="#" class="abutton">просмотр</a>
+                <a th:href="@{/tasks/preview/{id}(id=${task.id})}" class="abutton">просмотр</a>
                 <a th:href="@{/tasks/edit/{id}(id=${task.id})}" class="abutton">редактировать</a>
                 <a href="#" class="abutton" data-toggle="modal" data-target=".taskCopy"
                    th:attr="data-id=${task.id}, data-title=${task.title}">копировать</a>
