--- a/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/edit.html
@@ -66,7 +66,7 @@
                     <div class="col-12">
                         <div class="custom-file">
                             <input type="file" id="image" class="custom-file-input is-valid" th:field="*{image}"
-                                   accept="image/png, image/jpeg, image/gif" onchange=validateImage()>
+                                   accept="image/png, image/jpeg, image/gif">
                             <label class="custom-file-label text-dark" data-browse="Обзор" for="image" style="width: initial">
                                 Файл не выбран
                             </label>
@@ -81,8 +81,8 @@
                 </div>
                 <div class="form-row align-items-center">
                     <div class="col-1" style="min-width: 5rem"><label for="width" style="width: auto">Ширина:</label></div>
-                    <div class="col-3  was-validated" style="min-width: 8rem">
-                        <input type="number" min="0" max="65535" class="form-control form-control-sm text-dark"
+                    <div class="col-3" style="min-width: 8rem">
+                        <input type="number" min="0" max="65535" class="form-control form-control-sm text-dark is-valid"
                                id="width" th:field="*{width}" required>
                         <div class="invalid-feedback">Ширина картинки должна быть от 0 до 65535 пикселей</div>
                     </div>
@@ -121,11 +121,11 @@
                                         <div class="modal-body text-center" style="overflow: auto; margin: 1rem; padding: 0">
                                             <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
-                                                 alt="Image not found" th:if="${task.width == 0}"
+                                                 alt="Image not found" th:if="${task.width == 0 and task.height != 0}"
                                                  th:style="'height:' + ${task.height} + 'px'"/>
                                             <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
-                                                 alt="Image not found" th:if="${task.height == 0}"
+                                                 alt="Image not found" th:if="${task.height == 0 and task.width != 0 }"
                                                  th:style="'width:' + ${task.width} + 'px'"/>
                                             <img th:src="@{/img/tasks/{imageName}(imageName=${task.imageFileName})}"
                                                  th:onerror="'this.src=\'' + @{/img/image-not-found.png} + '\';'"
@@ -276,34 +276,29 @@
 <script type="text/javascript" th:src="@{/webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/4.6.0/js/bootstrap.bundle.min.js}"></script>
 <script type="text/javascript">
-    function validateImage() {
-        var image = document.getElementById('image')
-        var extErrMsg = document.getElementById('imageExtensionError')
+    $('#image').on('change', function() {
+        var imageName = $(this).val().replace(/C:\\fakepath\\/i, '')
         var sizeErrMsg = document.getElementById('imageSizeError')
-        var submitBtn = document.getElementById('submitBtn')
-        var exts = /(\.jpg|\.jpeg|\.gif|\.png)$/i;
+        var extErrMsg = document.getElementById('imageExtensionError')
+        var exts = /(\.jpg|\.jpeg|\.gif|\.png)$/i
         var isExt = exts.exec(image.files[0].name) != null
-        var isSize = image.files[0].size <= 10485760
+        var isSize = this.files[0].size <= 10485760
         if (isExt && isSize) {
-            image.classList.remove('is-invalid')
-            image.classList.add('is-valid')
-            extErrMsg.style.display = 'none'
+            $(this).next('.custom-file-label').html(imageName)
             sizeErrMsg.style.display = 'none'
-            submitBtn.setAttribute('type', 'submit')
+            extErrMsg.style.display = 'none'
         } else if (!isExt) {
-            image.classList.remove('is-valid')
-            image.classList.add('is-invalid')
+            $(this).next('.custom-file-label').html('Файл не выбран')
+            $(this).val(null)
             extErrMsg.style.display = 'block'
             sizeErrMsg.style.display = 'none'
-            submitBtn.setAttribute('type', 'button')
         } else if (!isSize) {
-            image.classList.remove('is-valid')
-            image.classList.add('is-invalid')
-            extErrMsg.style.display = 'none'
+            $(this).next('.custom-file-label').html('Файл не выбран')
+            $(this).val(null)
             sizeErrMsg.style.display = 'block'
-            submitBtn.setAttribute('type', 'button')
+            extErrMsg.style.display = 'none'
         }
-    }
+    })
 
     function fillAnswer(answerType) {
         if (answerType === 2 || answerType === 3 || answerType === 4 ||
@@ -353,13 +348,11 @@
             document.getElementById(name + 'Error').style.display = 'none';
     }
 
-    $('#image').on('change', function() {
-        var fileName = $(this).val().replace(/C:\\fakepath\\/i, '');
-        $(this).next('.custom-file-label').html(fileName);
-    })
-
     $(function () {
-        $('[data-toggle="tooltip"]').tooltip({ html: true })
+        $('[data-toggle="tooltip"]').tooltip({
+            html: true,
+            delay: {'show': 400}
+        })
     })
 
     function onUpdateAnswerTypeOrImage(answerType, imageFileName) {
