--- a/src/main/webapp/WEB-INF/view/admin/tasks/preview-results.html
+++ b/src/main/webapp/WEB-INF/view/admin/tasks/preview-results.html
@@ -1,5 +1,5 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-<div id="results-table" style="overflow: auto">
+<div id="preview-results" style="overflow: auto">
     <table class="table border center" aria-describedby="title" style="margin-bottom: .5rem">
         <tr style="text-align: center">
             <th id="answerName" style="vertical-align: middle">Название</th>
@@ -16,5 +16,10 @@
             <td>1</td>
         </tr>
     </table>
+
+    <fieldset>
+        <legend>Параметры задания</legend>
+        Параметры
+    </fieldset>
 </div>
 </html>
